Testing for WebGL compatibility before attempting to create vector tile layers, fallback to raster tiles.

--- a/explore/index.html
+++ b/explore/index.html
@@ -79,6 +79,7 @@
         <script src="https://www.trafforddatalab.io/assets/javascript/labGetQryStrValByKey.js"></script>
         <script src="https://www.trafforddatalab.io/assets/javascript/labSpinner.js"></script>
         <script src="https://www.trafforddatalab.io/assets/javascript/changeLuminosity.js"></script>
+        <script src="https://www.trafforddatalab.io/assets/javascript/supportWebGL.js"></script>
         <script src="https://www.trafforddatalab.io/assets/leaflet/labCreateTileLayer.js"></script>
         <script src="https://www.trafforddatalab.io/assets/leaflet/labCreateVectorTileLayer.js"></script>
         <script src="https://www.trafforddatalab.io/assets/leaflet/labLeafletMap.js"></script>
@@ -440,12 +441,7 @@
             var labMap = new LabLeafletMap({
                 title: 'Explore',
                 about: 'Discover the different geographies within Trafford by choosing a layer and then selecting an area.',
-                baseLayers: {   // Override the default baselayers in LabMap so that we can specify OS Zoomstack vector tile layers
-                    'Light': labCreateVectorTileLayer('OSZoomstack.Light'),
-                    'Outdoor': labCreateVectorTileLayer('OSZoomstack.Outdoor'),
-                    'Road': labCreateVectorTileLayer('OSZoomstack.Road'),
-                    'White': labCreateTileLayer(null)
-                },
+                baseLayers: {}, // Override the default baselayers in LabMap so that we can use OS Zoomstack vector layers if possible
                 attributes: {   // Override the default attributes in LabMap so that we can specify the maxBounds - the OS Zoomstack vector layers only cover Great Britain
                     center: [53.4189, -2.33],
                     zoom: 12,
@@ -457,15 +453,19 @@
                 }
             });
 
-            try {
+            if (supportWebGL) {
                 /*
-                    Attempt to add the vector tile layer as the map base layer.
-                    An error here could incicate that the vector layer cannot be found, or that it is not possible to create the WebGL object.
-                    If an error occurs, simply fallback to using raster tile layers (they have built in fallback in case the tile URL can't be loaded).
+                    Attempt to create vector tile base layers.
+                    If an error occurs we fallback to using raster tile layers (and they have built in fallback in case the tile URL can't be loaded).
                 */
-                labMap.baseLayers.Light.addTo(labMap.map);  // choose the initial base/tile layer for the map
+                labMap.baseLayers = {
+                    'Light': labCreateVectorTileLayer('OSZoomstack.Light'),
+                    'Outdoor': labCreateVectorTileLayer('OSZoomstack.Outdoor'),
+                    'Road': labCreateVectorTileLayer('OSZoomstack.Road'),
+                    'White': labCreateTileLayer(null)
+                }
             }
-            catch(e) {
+            else {
                 // Fallback to use raster tile layers instead of vector.
                 labMap.baseLayers = {
                     'Light': labCreateTileLayer('CartoDB.Positron'),
@@ -473,10 +473,10 @@
                     'Road': labCreateTileLayer('OpenStreetMap.Mapnik'),
                     'White': labCreateTileLayer(null)
                 }
-
-                labMap.updateLayerControl();                // update the layer control with the raster tile layers
-                labMap.baseLayers.Light.addTo(labMap.map);  // choose the initial base/tile layer for the map
             }
+
+            labMap.updateLayerControl();                // update the layer control with the raster tile layers
+            labMap.baseLayers.Light.addTo(labMap.map);  // choose the initial base/tile layer for the map
 
             // Add the isochrones plugin
             labMap.reachabilityControl = labSetupReachabilityPlugin({
