Added a function to format the property keys of the datasets so that they are presented nicely in the info panel. Previously we were doing this within the styled version of the geojson, however it is better done within the app, meaning that the geojson property keys can remain the same as the column names in the csv for consistency.

--- a/explore/index.html
+++ b/explore/index.html
@@ -283,7 +283,7 @@
                                 propsVal = props[key];
                             }
 
-                            propsTable += '<tr><td>' + key + '</td><td>' + propsVal + '</td></tr>';
+                            propsTable += '<tr><td>' + formatPropertyKey(key) + '</td><td>' + propsVal + '</td></tr>';
                         }
                     }
 
@@ -427,6 +427,13 @@
             // Determines whether the layer provided is a dataset layer
             function isDatasetLayer(layer) {
                 return (labMap.datasetLayer != null && labMap.datasetLayer.hasLayer(layer));
+            }
+
+            // Function to format the property keys of a given dataset, e.g. makes "area_name" into "Area name" so that it looks nice in the info panel
+            function formatPropertyKey(key) {
+                key = key.replace(/_/g, " ");   // remove and underscore characters and replace with spaces
+
+                return key.substring(0, 1).toUpperCase() + key.substring(1);    // capitalise the first character and then return the result
             }
 
             // Error functions for vector tile layers
