The data for the defibrillators map is available in Explore so have replaced this page with a redirect.

--- a/defibrillators/index.html
+++ b/defibrillators/index.html
@@ -1,164 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-GB">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
         <meta charset="UTF-8"/>
-        <meta name="keywords" content="defibrillators, defibrillator, defibrillation, automated external defibrillator, aed, trafford, open data, map, mapping"/>
-        <meta name="description" content="Map showing the location of defibrillators in Trafford"/>
         <title>Trafford Data Lab: Defibrillators</title>
-
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ==" crossorigin=""/>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-        <link rel="stylesheet" href="https://www.trafforddatalab.io/css/labBase.css"/>
-        <link rel="stylesheet" href="https://www.trafforddatalab.io/assets/leaflet/labLeafletMap.css"/>
-        <link rel="stylesheet" href="https://www.trafforddatalab.io/assets/leaflet/extended_markers/extended_markers_base.css"/>
-        <link rel="stylesheet" href="https://www.trafforddatalab.io/assets/leaflet/extended_markers/extended_markers_mixed.css"/>
-
-        <style>
-            @media (min-width:621px)
-            {
-                .mainPanelControl
-                {
-                    width: 280px;
-                }
-            }
-
-            .infoDockContainer
-            {
-                max-height: 200px;
-            }
-        </style>
+        <meta http-equiv="refresh" content="0; url=https://www.trafforddatalab.io/explore/#dataset=defibrillators"/>
     </head>
-
     <body>
-        <div id="map" class="mapFullScreen"></div>
-
-        <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js" integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log==" crossorigin=""></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.62.0/dist/L.Control.Locate.min.js"></script>
-        <script src="https://www.trafforddatalab.io/assets/javascript/labError.js"></script>
-        <script src="https://www.trafforddatalab.io/assets/javascript/labAjax.js"></script>
-        <script src="https://www.trafforddatalab.io/assets/leaflet/labCreateTileLayer.js"></script>
-        <script src="https://www.trafforddatalab.io/assets/leaflet/labLeafletMap.js"></script>
-
-        <script>
-            var defaultMarker = L.AwesomeMarkers.icon({
-                markerColor: 'pin-circle-orange-bright',
-                iconSize: [20, 39]
-            });
-
-            var selectedMarker = L.AwesomeMarkers.icon({
-                markerColor: 'pin-circle-yellow-bright',
-                iconSize: [20, 39]
-            });
-
-            function highlightMarker(e) {
-                if (defibMap.featureCache != null) {
-                    defibMap.featureCache.setIcon(defaultMarker);
-                }
-
-                defibMap.featureCache = e.target;
-                defibMap.featureCache.setIcon(selectedMarker);
-
-                defibMap.updateInfo(defibDetails(e.target.feature.properties));
-            }
-
-            function resetMarker() {
-                // In case of event bubbling - check we have a marker to reset
-                if (defibMap.featureCache != null) {
-                    defibMap.featureCache.setIcon(defaultMarker);
-                    defibMap.featureCache = null;
-                }
-
-                defibMap.updateInfo();
-            }
-
-            function defibDetails(props) {
-                var content = '';
-
-                // format the address details
-                if (props.Address1 != null) content += props.Address1;
-                if (props.Address2 != null) {
-                    if (content != '') content += '<br />';
-                    content += props.Address2;
-                }
-                if (props.Address3 != null) {
-                    if (content != '') content += '<br />';
-                    content += props.Address3;
-                }
-                if (props.Postcode != null) {
-                    if (content != '') content += '<br />';
-                    content += props.Postcode;
-                }
-
-                if (content != '') content = '<p>' + content + '</p>';
-
-                // See if there are any notes to add
-                if (props.Notes != null) content += '<p>' + props.Notes + '</p>';
-
-                // add the header
-                content = '<h4 style="font-weight: bold; margin-top: 0px; margin-bottom: 0px;">' + props.Location + '</h4>' + content;
-
-                return content;
-            }
-
-            var defibMap = new LabLeafletMap({
-                title: 'Defibrillators',
-                about: 'Select a marker for more information on the defibrillators within Trafford. The locations may not be exact in all cases as they are derived from postcodes. There may also be restrictions on access and availability. If you know of a defibrillator that has not been included then please <a href="mailto:infotrafford@trafford.gov.uk">email</a> or <a href="https://twitter.com/trafforddatalab" target="_blank">tweet</a> us.<br /><div style="margin-top: 10px;"><span style="font-weight:bold; color: #757575">Download:</span> <a href="https://www.trafforddatalab.io/open_data/defibrillators/trafford_defibrillators.csv" target="_blank"><span class="fa fa-file-text-o" aria-hidden="true"></span> CSV</a> | <a href="https://www.trafforddatalab.io/open_data/defibrillators/trafford_defibrillators.geojson" target="_blank"><span class="fa fa-file-code-o" aria-hidden="true"></span> GeoJSON</a><br />Updated 24 Jan 2017.</div>'
-            });
-
-            // For ensuring we can reset the marker highlight is one is selected
-            defibMap.featureCache = null;
-
-            defibMap.map.on('click', (function (e) {
-                resetMarker();
-            }));
-
-            // Choose the base/tile layer for the map
-            defibMap.baseLayers['Low detail'].addTo(defibMap.map);
-
-            // Add the Trafford boundary
-            labAjax('https://www.trafforddatalab.io/spatial_data/local_authority/2016/trafford_local_authority_full_resolution.geojson', function (data) {
-                var stylePoly = {
-                    color: '#212121',
-                    weight: 2,
-                    dashArray: '3',
-                    fillOpacity: 0
-                }
-
-                var traffordBoundary = L.geoJSON(data, { attribution: defibMap.attributionOS, style: stylePoly }).addTo(defibMap.map);
-
-                defibMap.map.fitBounds(traffordBoundary.getBounds());
-            });
-
-            // Add labels for the town centres
-            labAjax('https://www.trafforddatalab.io/spatial_data/town_centres/trafford_town_centres.geojson', function (data) {
-
-                var townCentres = L.geoJSON(data, {
-                    pointToLayer: function (feature, latlng) {
-                        return L.marker(latlng, { icon: L.divIcon({ iconSize: null }) }).bindTooltip(feature.properties.name, { direction: 'center', className: 'labLabels', opacity: 1, permanent: true });
-                    }
-                }).addTo(defibMap.map);
-
-                defibMap.overlayLayers['Town centres'] = townCentres;
-                defibMap.updateLayerControl();
-            });
-
-            // Add defibrillator locations within Trafford
-            labAjax('https://www.trafforddatalab.io/open_data/defibrillators/trafford_defibrillators.geojson', function (data) {
-                var marker;
-
-                L.geoJSON(data, {
-                    pointToLayer: function (feature, latlng) {
-
-                        marker = L.marker(latlng, { icon: defaultMarker }, { offset: [-7, 7] });
-                        marker.on('click', highlightMarker);
-                        return marker;
-
-                    },
-                    attribution: 'Defibrillator data released under <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/">Open Government Licence</a>'
-                }).addTo(defibMap.map);
-            });
-        </script>
+        The data for this map is now available within our Explore application: <a href="https://www.trafforddatalab.io/explore/#dataset=defibrillators">https://www.trafforddatalab.io/explore/#dataset=defibrillators</a>
     </body>
 </html>
