--- a/trafford_polling_stations/pageTest.html
+++ b/trafford_polling_stations/pageTest.html
@@ -6,12 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="utf-8">
     <title>
-    	Councillors & committees
+    	Trafford polling stations
     </title>
 </head>
 <body>
 
-                                <iframe style="width: 100%; min-height: 600px;" title="Trafford Councillors by ward" src="https://www.trafforddatalab.io/maps/trafford_polling_stations/"></iframe>
+                                <iframe style="width: 100%; height:100%;" title="Trafford polling stations" src="https://www.trafforddatalab.io/maps/trafford_polling_stations/"></iframe>
 
+<style>
+  html, body {
+        height: 100%; 
+        margin: 0; 
+        font-family: 'Open Sans', sans-serif;
+        overflow: hidden;
+        }
+</style>
 </body>
+
 </html>
