--- a/trafford_polling_stations/pageTest.html
+++ b/trafford_polling_stations/pageTest.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-                                <iframe style="width: 100%; height:100%;" title="Trafford polling stations" src="https://www.trafforddatalab.io/maps/trafford_polling_stations/"></iframe>
+                                <iframe style="width: 100%; height:100%; border:0px;" title="Trafford polling stations" src="https://www.trafforddatalab.io/maps/trafford_polling_stations/"></iframe>
 
 <style>
   html, body {
